# x3-counter-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  compose.yaml  init.sql  regex.txt
.sqlx/: query-27a6a4a1d2b9281325f41cd0b229d4b8efc20783db7d6d14aacb743d8a16b57d.json  query-3b70cd00b28f574efc1798a0f7e9a2b12efff41a8f525170b3cc94828ab8ae6e.json  query-4291c8811b23861c1d77c587903ac942b31107c2303edb401ee2c1cb2e16f3fb.json  query-448c2fae40dcbc3b0ea2e8edd4eae35c411427670da00fa873281bbce9562f04.json  query-47079ebf3bd7b9e9ddf1f3f50a6e52971a69dcfbb88b13e0b2ed198358062087.json  query-4e289116103739f9397fe867ecd4c23b427e9f9c9259ab140f279692cc06edd5.json  query-5b10f3b2bc20c0e6783bbb7737d867507e70475982baa8a671dd4b0087491035.json  query-66e5dcf841cd4b55daaab017a12bd97c0c5dcefc2d1770ca559aba69e7c4ccc7.json  query-7aeddc29a96c972e2ec93c8f037e37a984137d47a9274f1abcedaf78bd312a2a.json  query-86d96c936c505a878a6c220cd411b611d7e83217a6ee5666e69aed66d54c5577.json  query-94486be8b8d29d94051dd1248e02a8a244e237d023ed74084a6899f8195b1e46.json  query-a189a336cf8135f6428fb825bde00b1a0a525507520d0cf1379a050f56aac05c.json  query-ade643e5bd5b2a0af45af64da12558ff0af9cd33dfd0078d458a4425339e01de.json  query-adf980fa8fb90fdc30e250b81d64684de970190d13cfec4af4a41ef4eb7e3e8e.json  query-b2c7fe14696cdaf95f74c1f37233af77e8f254d0d5d9e572c5b8b02d8f71f1dc.json  query-b6d3b8bc76592a62752ac2cab7ae78aa7ecd1f136b153191eea18e54157c9180.json  query-c14538d4fd06c8986506b2ea464a52b031ea77c488b7850099bb67df55494cfd.json  query-cc2395b3b2c60fd6ac4242c4a84c80019fd7000d72d8631d6e69b3abe6ecb710.json  (+4 more)
(+11 files in other folders)
