[package]
name = "x3-counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
dotenvy = "0.15.7"
regex = "1.11.1"
serenity = "0.12.4"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
